--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "sass": "^1.77.8"
+    "sass": "^1.77.8",
+    "typewriter-effect": "^2.21.0"
   }
 }
