--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "keen-slider": "^6.8.6",
     "next": "14.2.5",
     "react": "^18",
